@startuml クラス図
left to right direction
class CustomUser{
    - id:AutoField
    - username:CharField
    - password:CharField
    - email:EmailField
    - last_login:DateTimeField
    - date_joined:DateTimeField
    - is_staff:BooleanField
    - is_superuser:BooleanField
    - deleted_at:DateTimeField
    - nickname:CharField
    - birthday:DateField
    - user_icon:ImageField
}

class FriendShip{
    - friend_id:AutoField
    - username_a:ForeginKey
    - ussername_b:ForginKey
    - user_a_request:BooleanField
    - user_b_request:BooleanField
    - created_at:DateTimeField
}

class Message{
    - Message_id:BigAutofield
    - friend_id:ForeignKey
    - message_image:ImageField
    - message_text:TextField
    - deleted_at:DateTimeField
    - send_at:DateTimeField
    - sender_id:ForeignKey
}

class Notification{
    - notify_id:AutoField
    - username:ForeginKey
    - Notification:CharField
    - notify_image:ImageField
    - notify_message:TextField
    - group:ForeignKey
    - is_read:BooleanField
    - title:CharField
    - created_at:DateTimeField
}

class Group{
    - group_id:AutoField
    - group_name:CharField
    - creator_username:ForeignKey
    - group_description:TextField
    - created_at:DateTimeField
    - update_at:DateTimeField
}

class GroupMember{
    - username:ForeignKey
    - group:ForeignKey
    - role:BooleanField
    - date_joined:DateTimeField
    - left_at:DateTimeField
    - lastviewed_at:DateTimeField
}

class GroupPost{
    - post_id:CharField
    - username:ForeignKey
    - group:ForeignKey
    - created_at:DateTimeField
    - update_at:DateTimeField
    - deleted_at:DateTimeField
    - post_content:TextField
    - post_images:ImageField
    - parent_post:ForeginKey
}

'ユーザ関係
CustomUser }|-|{ FriendShip
CustomUser ||--|{  Notification
CustomUser ||--o{ Message
CustomUser ||--o{ GroupMember
CustomUser ||--o{ Group
CustomUser ||--o{ GroupPost


'フレンド
FriendShip ||-o{ Message

'通知

Group ||--o{ GroupMember
Group ||-o{ GroupPost

Notification||--o{ Group

@enduml